--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <script src="Engine/engine.js"></script>
     <script src="Engine/display.js"></script>
     <script src="Engine/elements.js"></script>
+    <script src="Engine/userInterface.js"></script>
     <script src="game.js"></script>
-    <script src="Canvases/level.js"></script>
+    <script src="Levels/level.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
