--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="Engine/engine.js"></script>
     <script src="Engine/display.js"></script>
     <script src="Engine/elements.js"></script>
+    <script src="Engine/extra.js"></script>
     <script src="Assets/Characters/Player/player.js"></script>
     <script src="Assets/Characters/Boss/Maurice/maurice.js"></script>
     <script src="Engine/userInterface.js"></script>
