level changing, more key inputs..

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     <script src="Engine/elements.js"></script>
     <script src="Engine/extra.js"></script>
     <script src="Assets/Characters/Player/player.js"></script>
+    <script src="Assets/Characters/Boss/bullet.js"></script>
     <script src="Assets/Characters/Boss/Maurice/maurice.js"></script>
     <script src="Engine/userInterface.js"></script>
     <script src="game.js"></script>
     <script src="Levels/level.js"></script>
+    <script src="Levels/theWitless.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
