--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
     <canvas></canvas>
     <script src="Engine/engine.js"></script>
     <script src="Engine/display.js"></script>
+    <script src="Assets/Audio/AudioManager.js"></script>
+    <script src="Assets/Textures/TexturesManager.js"></script>
     <script src="Engine/elements.js"></script>
     <script src="Engine/extra.js"></script>
+    <script src="Assets/Characters/Player/sword.js"></script>
     <script src="Assets/Characters/Player/player.js"></script>
     <script src="Assets/Characters/Boss/bullet.js"></script>
     <script src="Assets/Characters/Boss/Maurice/maurice.js"></script>
+    <script src="Assets/Characters/Boss/Drone/drone.js"></script>
     <script src="Engine/userInterface.js"></script>
     <script src="game.js"></script>
     <script src="Levels/level.js"></script>
