--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <script src="game.js"></script>
     <script src="Levels/level00.js"></script>
     <script src="Levels/level01.js"></script>
+    <script src="Levels/level02.js"></script>
+    <script src="Levels/level03.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
