--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <script src="Levels/level01.js"></script>
     <script src="Levels/level02.js"></script>
     <script src="Levels/level03.js"></script>
+    <script src="Levels/level04.js"></script>
+    <script src="Levels/level05.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
