--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script src="Levels/level03.js"></script>
     <script src="Levels/level04.js"></script>
     <script src="Levels/level05.js"></script>
+    <script src="Levels/level06.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
