--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ULTRASAD</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="Assets/Textures/ULTRASAD_LOGO.png" type="image/x-icon">
 </head>
 <body>
     <canvas></canvas>
@@ -30,6 +31,12 @@
     <script src="Levels/level06.js"></script>
     <script src="Levels/level07.js"></script>
     <script src="Levels/level08.js"></script>
+    <script src="Levels/level09.js"></script>
+    <script src="Levels/level10.js"></script>
+    <script src="Levels/level11.js"></script>
+    <script src="Levels/level12.js"></script>
+    <script src="Levels/level13.js"></script>
+    <script src="Levels/level14.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
